// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HouseNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="house_number"
      >
        Numer domu
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Numer domu"
          name="house_number"
          placeholder="Numer domu"
          value="12345678900"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<HouseNumberField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="Numer domu"
  name="house_number"
  placeholder="Numer domu"
  value=""
/>
`;

exports[`<HouseNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="house_number"
      >
        HouseNumber*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="HouseNumber"
          name="house_number"
          placeholder="Numer domu*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<HouseNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="house_number"
      >
        HouseNumber
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="HouseNumber"
          name="house_number"
          placeholder="Numer domu"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
